--- a/config/server.conf
+++ b/config/server.conf
@@ -11,7 +11,8 @@ ban_duration_sec = 60
 connection_timeout_sec = 10
 keepalive_timeout_sec = 5
 cache_max_entries = 128
-log_file = webserver.log
+# log_file = webserver.log
+log_file = E:/PBL_Vth_sem/webserver/webserver/webserver.log
 enable_metrics = 1
 metrics_path = /metrics
 status_path = /status
