--- a/config/server.conf
+++ b/config/server.conf
@@ -1,6 +1,7 @@
 # WebServer configuration
-listen_addr = 127.0.0.1
-listen_port = 8080
+#listen_addr = 127.0.0.1
+listen_addr = 0.0.0.0
+listen_port = 8000
 document_root = ./www
 num_threads = 8
 queue_size = 1024
